--- a/index.html
+++ b/index.html
@@ -23,6 +23,36 @@
             <div class="material-icons menu-icon icon-cut">content_cut</div>
             <div class="material-icons menu-icon icon-copy">content_copy</div>
             <div class="material-icons menu-icon icon-paste">content_paste</div>
+
+            <select class="selector font-family-selector">
+                <option style="font-family: Noto Sans;" value="Noto Sans" selected>Noto Sans</option>
+                <option style="font-family:Arial" value="Arial">Arial</option>
+                <option style="font-family:Calibri" value="Calibri">Calibri</option>
+                <option style="font-family:Comic Sans MS" value="Comic Sans MS">Comic Sans MS</option>
+                <option style="font-family:Courier New" value="Courier New">Courier New</option>
+                <option style="font-family:Impact" value="Impact">Impact</option>
+                <option style="font-family:Georgia" value="Georgia">Georgia</option>
+                <option style="font-family:Garamond" value="Garamond">Garamond</option>
+                <option style="font-family:Lato" value="Lato">Lato</option>
+                <option style="font-family:Open Sans" value="Open Sans">Open Sans</option>
+                <option style="font-family:Palatino" value="Palatino">Palatino</option>
+                <option style="font-family:Verdana" value="Verdana">Verdana</option>
+            </select>
+
+            <select class="selector font-size-selector">
+                <option value="10">10</option>
+                <option value="12">12</option>
+                <option value="14">14</option>
+                <option value="16">16</option>
+                <option value="18">18</option>
+                <option value="20">20</option>
+                <option value="22">22</option>
+                <option value="24">24</option>
+                <option value="26">26</option>
+                <option value="28">28</option>
+                <option value="30">30</option>
+            </select>
+
             <div class="material-icons menu-icon icon-bold">format_bold</div>
             <div class="material-icons menu-icon icon-italic">format_italic</div>
             <div class="material-icons menu-icon icon-underline">format_underline</div>
