--- a/index.html
+++ b/index.html
@@ -64,11 +64,22 @@
         </div>
         <div class="formula-bar"></div>
         <div class="data-container">
-            <div class="row-name-container"></div>
+            <div class="select-all"></div>
             <div class="col-name-container"></div>
+            <div class="row-name-container"></div>
             <div class="input-cell-container"></div>
         </div>
-        <div class="sheet-bar"></div>
+        <div class="sheet-bar">
+            <div class="scroller">
+                <div class="material-icons icon-left-scroll">arrow_left</div>
+                <div class="material-icons icon-right-scroll">arrow_right</div>
+            </div>
+            <div class="sheet-tab-container">
+                <div class="sheet-tab">Sheet 1</div>
+                <div class="sheet-tab">Sheet 2</div>
+            </div>
+            <div class="material-icons icon-add">add_circle</div>
+        </div>
     </div>
 </body>
 </html>
