--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <option value="30">30</option>
             </select>
 
-            <div class="material-icons menu-icon icon-bold">format_bold</div>
-            <div class="material-icons menu-icon icon-italic">format_italic</div>
-            <div class="material-icons menu-icon icon-underline">format_underline</div>
-            <div class="material-icons menu-icon icon-align-left">format_align_left</div>
-            <div class="material-icons menu-icon icon-align-center">format_align_center</div>
-            <div class="material-icons menu-icon icon-align-right">format_align_right</div>
+            <div class="material-icons menu-icon icon-bold style-icon">format_bold</div>
+            <div class="material-icons menu-icon icon-italic style-icon">format_italic</div>
+            <div class="material-icons menu-icon icon-underline style-icon">format_underline</div>
+            <div class="material-icons menu-icon icon-align-left selected align-icon">format_align_left</div>
+            <div class="material-icons menu-icon icon-align-center align-icon">format_align_center</div>
+            <div class="material-icons menu-icon icon-align-right align-icon">format_align_right</div>
             <div class="material-icons menu-icon icon-color-fill">format_color_fill</div>
             <div class="material-icons menu-icon icon-color-text">format_color_text</div>
         </div>
