--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
             <div class="material-icons menu-icon icon-align-left selected align-icon">format_align_left</div>
             <div class="material-icons menu-icon icon-align-center align-icon">format_align_center</div>
             <div class="material-icons menu-icon icon-align-right align-icon">format_align_right</div>
-            <div class="material-icons menu-icon icon-color-fill">format_color_fill</div>
-            <div class="material-icons menu-icon icon-color-text">format_color_text</div>
+            <div class="menu-icon icon-color-fill">
+                <input class="input-color-bar" type="color"/>
+                <div class="material-icons">format_color_fill</div>
+            </div>
+            <div class="menu-icon icon-color-text">
+                <input class="input-color-bar" type="color"/>
+                <div class="material-icons">format_color_text</div>
+            </div>
         </div>
         <div class="formula-bar">
             <div class="formula-editor selected-cell" contenteditable="true"></div>
