Applying colors to cells

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="material-icons menu-icon icon-align-center align-icon">format_align_center</div>
             <div class="material-icons menu-icon icon-align-right align-icon">format_align_right</div>
             <div class="menu-icon icon-color-fill">
-                <input class="input-color-bar" type="color"/>
-                <div class="material-icons">format_color_fill</div>
+                <input class="input-color-bar background-color-picker" type="color"/>
+                <div class="material-icons bg-color-click">format_color_fill</div>
             </div>
             <div class="menu-icon icon-color-text">
-                <input class="input-color-bar" type="color"/>
-                <div class="material-icons">format_color_text</div>
+                <input class="input-color-bar text-color-picker" type="color"/>
+                <div class="material-icons text-color-click">format_color_text</div>
             </div>
         </div>
         <div class="formula-bar">
