Adding modal for deleting and renaming the sheet

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         </div>
     </div>
 
+    <div class="delete-rename-modal">
+        <div class="rename-sheet">Rename</div>
+        <div class="delete-sheet">Delete</div>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
