Adding button click behaviour in rename modal

--- a/index.html
+++ b/index.html
@@ -104,10 +104,19 @@
         </div>
     </div>
 
-    <div class="delete-rename-modal">
+    <!-- <div class="delete-rename-modal">
         <div class="rename-sheet">Rename</div>
         <div class="delete-sheet">Delete</div>
-    </div>
+    </div> -->
+
+    <!-- <div class="sheet-rename-modal">
+        <h4 class="rename-modal-title">Rename Sheet To:</h4>
+        <input type="text" class="new-sheet-name" placeholder="Enter Name" value=""/>
+        <div class="action-buttons">
+            <div class="submit-button">Rename</div>
+            <div class="cancel-button">Cancel</div>
+        </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
