--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="material-icons icon-right-scroll">arrow_right</div>
             </div>
             <div class="sheet-tab-container">
-                <div class="sheet-tab selected" id="1">Sheet 1</div>
+                <div class="sheet-tab selected">Sheet 1</div>
             </div>
             <div class="material-icons icon-add">add_circle</div>
         </div>
