Adding selecting all cells at once icon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             <div class="formula-editor formula-input" contenteditable="true"></div>
         </div>
         <div class="data-container">
-            <div class="select-all"></div>
+            <div class="select-all">
+                <div class="select-triangle"></div>
+            </div>
             <div class="col-name-container">
                 <!-- <div class="col-name">A</div>
                 <div class="col-name">B</div> -->
