--- a/assets/register.html
+++ b/assets/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,17 @@
     <title>Excel Clone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="register.css">
 </head>
+
 <body>
     <div class="container">
-        <img src="assets/wallpaper.png" class="bg" alt="wallpaper">
+        <img src="public/wallpaper.png" class="bg" alt="wallpaper">
         <h1 class="project-title">Excel Clone</h1>
         <div class="register-container">
-            <img src="assets/user.png" width="90px" height="90px" alt="user">
+            <img src="public/user.png" width="90px" height="90px" alt="user">
             <h1 class="sign-in-to-continue">Sign In To Continue</h1>
             <input type="email" class="input-box" placeholder="Your Email">
             <input type="password" class="input-box" placeholder="Your Password">
@@ -24,10 +26,11 @@
             <hr>
             <p class="or">OR</p>
             <div class="button google-btn">
-                <img src="assets/google.png" width="24px" height="24px" alt="google_icon" class="google-icon">
+                <img src="public/google.png" width="24px" height="24px" alt="google_icon" class="google-icon">
                 <p class="continue-with-google">Continue with Google<p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
