Adding dashboard page and favicon

--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -7,15 +7,156 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel Clone</title>
     <link rel="stylesheet" href="../css/dashboard.css">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../public/favicon-16x16.png">
+    <link rel="manifest" href="../public/site.webmanifest">
+    <link rel="mask-icon" href="../public/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <div class="container">
-        <div class="navbar"></div>
-        <div class="data-container">
-            <div class="book-container">
-                <div class="book-nav"></div>
-                <div class="book-list"></div>
+        <div class="navbar">
+            <div class="project-logo">
+                <img src="../public/logo.png" alt="">
+            </div>
+            <div class="project-title-container">
+                <span class="project-title">Excel</span>
+            </div>
+            <div class="user-account">
+                <span class="user-initials">NG</span>
+            </div>
+        </div>
+        <div class="book-container">
+            <div class="book-nav">
+                <div class="nav-item">
+                    Recent
+                </div>
+            </div>
+            <div class="book-list">
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="list-item-container">
+                    <div class="list-item">
+                        <div class="li-logo">
+                            <img src="../public/logo.png" alt="">
+                        </div>
+
+                        <div class="li-book-name">
+                            <span class="li-text">Book 1</span>
+                        </div>
+                        <div class="li-date">
+                            <span class="li-text">23 Sep 2021</span>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
             </div>
         </div>
     </div>
