Adding ejs, removing pug

--- a/src/assets/pages/register.html
+++ b/src/assets/pages/register.html
@@ -28,10 +28,10 @@
         <div class="register-container">
             <img src="user.png" width="90px" height="90px" alt="user">
             <h1 class="sign-in-to-continue">Create Your Account</h1>
-            <input type="text" class="input-box" placeholder="Your Name" required>
-            <input type="email" class="input-box" placeholder="Your Email" required>
-            <input type="password" class="input-box" placeholder="Your Password" required>
-            <div class="button signin-btn">Register</div>
+            <input id="user-name" type="text" class="input-box" placeholder="Your Name" required>
+            <input id="user-email" type="email" class="input-box" placeholder="Your Email" required>
+            <input id="user-password" type="password" class="input-box" placeholder="Your Password" required>
+            <div id="register-btn" class="button signin-btn">Register</div>
             <hr>
             <p class="or">OR</p>
             <div class="button google-btn">
@@ -41,6 +41,7 @@
             <p>Already have an account?&nbsp<a style="color:#68b62b" href="/">Login</a></p>
         </div>
     </div>
+    <script src="register.js"></script>
 </body>
 
 </html>
