Adding routes for and scripts for dashboard and book pages

--- a/src/assets/pages/dashboard.html
+++ b/src/assets/pages/dashboard.html
@@ -27,7 +27,7 @@
                 <span class="project-title">Excel</span>
             </div>
             <div class="user-account">
-                <span class="user-initials">NG</span>
+                <span id="user-initials" class="user-initials">NG</span>
             </div>
         </div>
         <div class="book-container">
@@ -36,130 +36,11 @@
                     Recent
                 </div>
             </div>
-            <div class="book-list">
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="list-item-container">
-                    <div class="list-item">
-                        <div class="li-logo">
-                            <img src="../public/logo.png" alt="">
-                        </div>
-
-                        <div class="li-book-name">
-                            <span class="li-text">Book 1</span>
-                        </div>
-                        <div class="li-date">
-                            <span class="li-text">23 Sep 2021</span>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
+            <div id="book-list" class="book-list">
             </div>
         </div>
     </div>
+    <script src="dashboard.js"></script>
 </body>
 
 </html>
