Adding multi-sheet loading from existing book data

--- a/src/assets/pages/book.html
+++ b/src/assets/pages/book.html
@@ -20,7 +20,14 @@
 
 <body>
     <div class="container">
-        <div id="title-bar" class="title-bar">Untitled Book</div>
+        <div id="title-bar" class="title-bar">
+            <div id="title-text" class="title-text">
+                <span>Untitled Book</span>
+            </div>
+            <div id="save-btn" class="save-btn">
+                <div class="save-btn-text">Save</div>
+            </div>
+        </div>
         <div class="menu-bar">
             <div class="menu-file menu-item">File</div>
             <div class="menu-home menu-item selected">Home</div>
@@ -117,9 +124,7 @@
                 <div class="material-icons icon-left-scroll">arrow_left</div>
                 <div class="material-icons icon-right-scroll">arrow_right</div>
             </div>
-            <div class="sheet-tab-container">
-                <div class="sheet-tab selected">Sheet 1</div>
-            </div>
+            <div class="sheet-tab-container"></div>
             <div class="material-icons icon-add">add_circle</div>
         </div>
     </div>
