--- a/src/assets/pages/dashboard.html
+++ b/src/assets/pages/dashboard.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container" class="container">
         <div class="navbar">
             <div class="project-logo">
                 <img src="logo.png" alt="">
@@ -32,8 +32,15 @@
         </div>
         <div class="book-container">
             <div class="book-nav">
-                <div class="nav-item">
-                    Recent
+                <div class="nav-item-recent">
+                    <div class="nav-item">
+                        Recent
+                    </div>
+                </div>
+                <div id="nav-item-new" class="nav-item-new">
+                    <div class="nav-item nav-item-new-text">
+                        +
+                    </div>
                 </div>
             </div>
             <div id="book-list" class="book-list">
