--- a/src/assets/pages/dashboard.html
+++ b/src/assets/pages/dashboard.html
@@ -29,6 +29,9 @@
             <div class="user-account">
                 <span id="user-initials" class="user-initials">NG</span>
             </div>
+            <div class="logout">
+                <span id="logout-btn" class="logout-btn">Logout</span>
+            </div>
         </div>
         <div class="book-container">
             <div class="book-nav">
